// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component Use avatar if provided 1`] = `
<div
  className=""
>
  <img
    alt="Top game"
    src="https://ya-praktikum.tech/boobies.png"
  />
  <h1>
    Top game
  </h1>
</div>
`;

exports[`Avatar component Use className prop 1`] = `
<div
  className="someClass"
>
  <img
    alt="Top game"
    src="/images/avatar.png"
  />
  <h1>
    Top game
  </h1>
</div>
`;

exports[`Avatar component Use default image if no avatar is provided 1`] = `
<div
  className=""
>
  <img
    alt="Top game"
    src="/images/avatar.png"
  />
  <h1>
    Top game
  </h1>
</div>
`;
